syntax = "proto3";

enum UserTypeEnum {
    UNKNOWN_USER = 0;
    USER_ADMINISTRATOR = 1;
    USER_TEACHER = 3;
    USER_ACCOUNTANT = 4;
    USER_STUDENT = 5;
    USER_OTHERS = 6;
}
